# MolSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile_commands.json
.github/workflows/: ci.yml
MolSim/: MolSim.advixeproj
MolSim/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  roofline_int.data  settings.xml
MolSim/e000/hs010/: hs010.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
MolSim/e000/hs010/config/: collection.cfg  context_values.cfg  runss.options
MolSim/e000/hs010/data.0/: 877637-877648.0-877648.0.th  877637-877648.0-877648.0.th.aux  877637-877648.0.trace  systemcollector-877637-ivan-System-Product-Name.sc
MolSim/e000/trc000/: trc000.advixe
MolSim/e000/trc000/config/: collection.cfg  context_values.cfg  runtrc.options
MolSim/e000/trc000/data.0/: advixe-runtrc.txt  bandwidth_1737307442.hpc  tripcounts_877829_0.tcs
cmake/modules/: doxygen.cmake
input/: MD_vtk_0500.vtu  example-cuboid.txt  simple-simulation-test.txt
input/txt_file/: collision-of-two-bodies.txt  multiple-particle-simple-test.txt  one-body-test.txt  simple-test-LJF.txt
input/xml_file/: bigger-collision.xml  diagonal-particle.xml  example-3.xml  fixed-cuboid-example.xml  periodic-test.xml  sheet1-example.xml  sheet2-example-part1.xml  sheet2-example-part2.xml  sheet2-example-v2.xml  sheet2-example.xml  sheet3-task2-example.xml  sheet3-task4-example.xml  sheet4-task2-example.xml  sheet4-task2-larger-example.xml  sheet4-task3-example-part1.xml  sheet4-task3-example-part2.xml  sheet4-task3-example.xml  sheet5-task1-example.xml  sheet5-task3-example.xml  sheet5-task3-middle-example.xml  sheet5-task3-simple-example.xml  sheet5-task3-smaller-example.xml  sheet5-task4-example.xml  sheet5-task4-small-example.xml  small-example.xml  task2-example.xml  task4-example.xml  test.xml  two-cuboids-example.xml  worksheet1-example.xml  worksheet2-example.xml
scripts/: benchmark.py  cleanup.sh  format.sh  move_to_win.sh  run_molsim.sh  run_molsim_cm4tiny.sh
src/: FileReader.cpp  FileReader.h  Logger.cpp  Logger.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h
src/io/: FileReader.cpp  FileReader.h
src/io/input/: CheckpointReader.cpp  CheckpointReader.h  FileReader.cpp  FileReader.h  MolSim.cxx  MolSim.hxx  MolSim.xsd  XMLReader.cpp  XMLReader.h
src/io/input/cli/: CommandParser.cpp  CommandParser.h  SimParams.cpp  SimParams.h
src/io/output/: CheckpointWriter.cpp  CheckpointWriter.h  FileWriter.cpp  FileWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/io/output/outputUtils/: vtk-unstructured.h
src/logger/: Logger.cpp  Logger.h
src/outputWriter/: VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h  vtk-unstructured.cpp
src/particleSim/: Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h
src/simulator/: ParticleContainer.h  Simulation.cpp  Simulation.h  Thermostat.cpp  Thermostat.h
src/simulator/calculations/: BoundaryConditions.cpp  BoundaryConditions.h  Calculation.h  Force.cpp  Force.h  Position.cpp  Position.h  Velocity.cpp  Velocity.h
src/simulator/particle/: BoundaryCondition.h  LinkedCellContainer.cpp  LinkedCellContainer.h  LinkedCells.cpp  LinkedCells.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h
src/simulator/particle/container/: DirectSumContainer.cpp  DirectSumContainer.h  LinkedCellContainer.cpp  LinkedCellContainer.h  (+4 more)
src/utils/: ArrayUtils.h  CommandParser.h  GetoptWrapper.h  MaxwellBoltzmannDistribution.h  ParticleProfiler.cpp  ParticleProfiler.h  SimParams.h
tests/: CMakeLists.txt  basic_test.cc  basic_test.cpp  boundary_conditions_test.cpp  generator_test.cc  generator_test.cpp  hello_test.cc  linked_cell.cpp  membrane_test.cpp  particle_profiler_test.cpp  periodic_conditions_test.cpp  thermostat_test.cpp
(+4 files in other folders)
